# Packing-list-break-down

./: .gitignore  README.md  pyproject.toml
src/packing_list_translator/: __init__.py  cli.py  excel_translator.py
tests/: test_excel_translator.py
